# evo_ros_effictive_app

./: CMakeLists.txt  README.md  catkin_make.sh
src/common_msgs/: CMakeLists.txt  package.xml
src/common_msgs/include/: common.h  config.h  config.h.in
src/common_msgs/msg/: TrajectoryInfo.msg  TrajectorytoMotor.msg  camera_info.msg  camera_info_list.msg  camera_status.msg  charge_lead_info.msg  dead_reckon_info.msg  head_feedback.msg  infrared_info.msg  infrared_info_list.msg  infrared_threshold.msg  log.msg  motion_id_sn.msg  motion_result_feedback.msg  msgdata.msg  power_detection_status.msg  serdata.msg  set_head_move.msg  set_wheel_differential_motion.msg  set_wheel_fixed_motion.msg  set_wheel_stop.msg  set_wing_move.msg  ultra_air_quality_feedback.msg  ultra_charge_pile_feedback.msg  ultra_charge_pile_status.msg  ultra_id_sn.msg  ultra_info.msg  ultra_info_list.msg  ultra_work_status.msg  upgrade_comm.msg  wing_feedback.msg
src/common_msgs/srv/: dbg_service.srv  get_charge_band_status.srv  get_charge_lead_data.srv  get_driver_check_status.srv  get_head_angle.srv  get_io_charge_status.srv  get_motion_idsn.srv  get_node_work_status.srv  get_power_detection_status.srv  get_recalibration_info.srv  get_ultra_blind_feedback.srv  get_ultra_calibration_feedback.srv  get_ultra_charge_pile_feedback.srv  get_ultra_idsn.srv  get_ultra_work_status.srv  get_wing_angle.srv  infrared_init_data.srv  reg_dbg_service.srv  request_wheels_motion.srv  requset_infrared.srv  set_dead_reckon_info.srv  set_infrared_work_status.srv  set_node_status.srv  set_uint16_status.srv  set_uint8_status.srv  set_ultra_blind_status.srv  set_ultra_charge_pile_status.srv  set_ultra_work_status.srv
src/config/: CMakeLists.txt  package.xml  version.yaml  version2.yaml
src/config/src/: config_main.cpp
src/lib/comlib/: CMakeLists.txt  package.xml
src/lib/comlib/include/: configer.h  endianconvert.h  orrbase.h  orsbase.h  tinyxml.h  ulog.h  umutex.h
src/lib/comlib/serial/include/: boostserial.h  serialinit.h
src/lib/comlib/serial/src/: boostserial.cpp  serialinit.cpp
src/lib/comlib/src/: configer.cpp  endianconvert.c  orrbase.cpp  orsbase.cpp  tinystr.cpp  tinyxmlparser.cpp  ulog.cpp
src/lib/comlib/timer/include/: asynctimer.h
src/lib/comlib/timer/src/: asynctimer.cpp  rosasynctimer.cpp
src/move/: CMakeLists.txt  package.xml
src/move/include/: def.h  local2motor.h  motor2local.h  movecenter.h  securitypolicy.h
src/move/src/: local2motor.cpp  motor2local.cpp  move_main.cpp  movecenter.cpp  securitypolicy.cpp
