<?xml version ="1.0"?>
<package>
<name>move</name>
<version >0.0.1 </version >
<description >
wheels
</description >
<maintainer email="707196192@qq.com">
LiuKai
</maintainer >
<license >TODO</license >
<buildtool_depend>catkin </buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>common_func</build_depend>
  <run_depend>common_func</run_depend>
</package>
